monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/ConservativeExtensionSup.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar ConservativeExtensionSup extends de.monticore.grammar.cocos.valid.ConservativeExtensionSuper {

    A extends M = Name P? ;

    P = "-"? "some" M* ;

    C extends M = P* Name P? ;

    D extends M = Name n:Name;

    Q = M? "optional" ;

    F extends N = x:M? "one" M;

}