monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4031/A4031e.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4031;

grammar A4031e {
  enum a = "a";

}
